c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/missing_for_header_clauses.c
int main(void) {
    for (2 + 2 == 4)
        ;
    return 0;
}
